--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         <!-- Run the game code -->
         <script type="text/javascript" src="html5game/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.js?cachebust=924915743"></script>
-
+        <script>requestFullscreen();</script>
         <!-- Builtin injector for injecting runner path -->
         
 
